; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/fmgr/extr_dfmgr.c_find_rendezvous_variable.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/fmgr/extr_dfmgr.c_find_rendezvous_variable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i8* }
%struct.TYPE_6__ = type { i32, i32 }

@find_rendezvous_variable.rendezvousHash = internal global i32* null, align 8
@NAMEDATALEN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"Rendezvous variable hash\00", align 1
@HASH_ELEM = common dso_local global i32 0, align 4
@HASH_ENTER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8** @find_rendezvous_variable(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_6__, align 4
  store i8* %0, i8** %2, align 8
  %6 = load i32*, i32** @find_rendezvous_variable.rendezvousHash, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %15

8:                                                ; preds = %1
  %9 = call i32 @MemSet(%struct.TYPE_6__* %5, i32 0, i32 8)
  %10 = load i32, i32* @NAMEDATALEN, align 4
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 1
  store i32 %10, i32* %11, align 4
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 0
  store i32 8, i32* %12, align 4
  %13 = load i32, i32* @HASH_ELEM, align 4
  %14 = call i32* @hash_create(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 16, %struct.TYPE_6__* %5, i32 %13)
  store i32* %14, i32** @find_rendezvous_variable.rendezvousHash, align 8
  br label %15

15:                                               ; preds = %8, %1
  %16 = load i32*, i32** @find_rendezvous_variable.rendezvousHash, align 8
  %17 = load i8*, i8** %2, align 8
  %18 = load i32, i32* @HASH_ENTER, align 4
  %19 = call i64 @hash_search(i32* %16, i8* %17, i32 %18, i32* %4)
  %20 = inttoptr i64 %19 to %struct.TYPE_5__*
  store %struct.TYPE_5__* %20, %struct.TYPE_5__** %3, align 8
  %21 = load i32, i32* %4, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %26, label %23

23:                                               ; preds = %15
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %24, i32 0, i32 0
  store i8* null, i8** %25, align 8
  br label %26

26:                                               ; preds = %23, %15
  %27 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i32 0, i32 0
  ret i8** %28
}

declare dso_local i32 @MemSet(%struct.TYPE_6__*, i32, i32) #1

declare dso_local i32* @hash_create(i8*, i32, %struct.TYPE_6__*, i32) #1

declare dso_local i64 @hash_search(i32*, i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
